--- a/Dockerfile_mlcube_sudo
+++ b/Dockerfile_mlcube_sudo
@@ -1,8 +1,8 @@
 FROM ubuntu:18.04
 
-RUN apt-get update && apt-get install -y \
-    software-properties-common && apt install default-jdk -y
-RUN apt-get install -y python3.8 python3-pip
+RUN sudo apt-get update && sudo apt-get install -y \
+    software-properties-common && sudo apt install default-jdk -y
+RUN sudo apt-get install -y python3.8 python3-pip
 
 COPY requirements.txt /app/requirements.txt
 RUN pip3 install --upgrade pip && pip3 install -r /app/requirements.txt
@@ -11,6 +11,6 @@ COPY *.py /app/
 COPY *.yaml /app/
 COPY *.sh /app/
 
-WORKDIR /app
+WORKDIR /app/
 RUN chmod +x /app/run_evaluate.sh
 ENTRYPOINT ["python3", "/app/mlcube.py"]
